# motion-perceiver

./: .dockerignore  .gitignore  Dockerfile  README.md  data_viz.py  dataset.py  docker-build.sh  docker-compose.yml  evaluate.py  evaluate_plus.py  export_waymo.py  make_video.py  review.py  sdc_conditional.py  tf.Dockerfile  tools.py  train.py
cfg/: all-ctx.yml  no-ctx.yml  occ-flow.yml  pedestrian.yml  train_cfg.yml  two-phase.yml  waymo_sdc_frame.yml
src/: __init__.py  loss.py  optim.py  statistics.py
src/dataset/: __init__.py  common.py  eth_ucy.py  imagenet.py  interaction.py  make_eth.py  make_eth_ucy.py  make_interaction.py  make_ucy.py  pedestrain_pipe.py  pedestrian.py  sdd.py  sdd_metadata.yml  trajdata2tfrec.py  utils.py  visualisation.py  waymo.py
src/dataset/plugins/: .clang-format  CMakeLists.txt  makeplugins.sh
src/dataset/plugins/cmake/: CPM.cmake
src/dataset/plugins/maskedops/: CMakeLists.txt  maskedops.cpp  maskedops.hpp
src/dataset/plugins/maskfrompoly/: CMakeLists.txt  maskfrompoly.cpp  maskfrompoly.hpp
src/dataset/plugins/random/: CMakeLists.txt  plugin.cpp  plugin.hpp
src/dataset/plugins/roadgraph/: CMakeLists.txt  roadgraph.cpp  roadgraph.hpp
src/dataset/plugins/scene_loader/: CMakeLists.txt  src.cpp  src.hpp
src/dataset/plugins/stride/: CMakeLists.txt  plugin.cpp  plugin.hpp
src/model/: __init__.py  _iadapter.py  _oadapter.py  motion_perceiver.py  perceiver_io.py
test/: test_waymo_native.py
test_dali_idx/: waymo-sample.tfrecord.idx
utils/: eval_common.py  eval_data.py  export_tf.py  export_torch.py  plot_results.py  plot_utils.py  plotly_media.py  plotly_pretrain_graph.py  plotly_timeseries.py  plotly_timeseries_v2.py  tfrecord_subset.py  visual.py
utils/dataset/: make_eth_ucy.py  make_interaction.py  trajdata2tfrec.py
utils/review_pages/: plot_utils.py  plotly_timeseries.py
